--- a/src/customranges.ui
+++ b/src/customranges.ui
@@ -71,6 +71,12 @@
          </item>
          <item>
           <widget class="QToolButton" name="tbMoreOptions">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>&amp;More </string>
            </property>
