--- a/src/custompalettes.ui
+++ b/src/custompalettes.ui
@@ -10,6 +10,12 @@
     <height>354</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>515</width>
+    <height>354</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Palette Editor</string>
   </property>
