Make UI definitions work with Qt 4.6
Although the QIcon::fromTheme() was apparently introduced in 4.6, the
relevant UI definition syntax for setting theme icons in the .ui files
is more recent (possibly 4.8).

This fix works by moving the theme icon specifications out of the .ui
files and taking care of them in the C++ in the window class
constructors.

--- a/src/custompalettes.ui
+++ b/src/custompalettes.ui
@@ -44,11 +44,7 @@
            <property name="text">
             <string>&amp;New</string>
            </property>
-           <property name="icon">
-            <iconset theme="list-add">
-             <normaloff/>
-            </iconset>
-           </property>
+		   <property name="icon" />
            <property name="toolButtonStyle">
             <enum>Qt::ToolButtonTextBesideIcon</enum>
            </property>
@@ -62,11 +58,7 @@
            <property name="text">
             <string>&amp;Delete</string>
            </property>
-           <property name="icon">
-            <iconset theme="list-remove">
-             <normaloff/>
-            </iconset>
-           </property>
+		   <property name="icon" />
            <property name="toolButtonStyle">
             <enum>Qt::ToolButtonTextBesideIcon</enum>
            </property>
@@ -237,21 +229,13 @@
    </item>
   </layout>
   <action name="action_Rename">
-   <property name="icon">
-    <iconset theme="edit-rename">
-     <normaloff/>
-    </iconset>
-   </property>
+   <property name="icon" />
    <property name="text">
     <string>&amp;Rename</string>
    </property>
   </action>
   <action name="action_Duplicate">
-   <property name="icon">
-    <iconset theme="edit-copy">
-     <normaloff/>
-    </iconset>
-   </property>
+   <property name="icon" />
    <property name="text">
     <string>&amp;Duplicate</string>
    </property>
