Deploy an initial implementation of an ImageLabel class (subclassing QLabel) that uses on-demand nearest-neighbor scaling for its contents
This simple implementation is much more forgiving in RAM usage than our
previous hack using a regular QLabel with a pre-scaled QPixmap.

For example, given a 1280x800 image, the previous (0.2.0) implementation
would use around 1 GiB of RAM at the maximum zoom level; the new
implementation uses only around the same amount of RAM as it does at
100% zoom (around 45 MiB). The improvement should be obvious at first
glance.

However, this new mechanism isn't as forgiving in CPU time terms. This
needs to be solved before the next release.

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -135,7 +135,7 @@
          <property name="whatsThis">
           <string/>
          </property>
-         <widget class="QLabel" name="previewOriginal">
+         <widget class="ImageLabel" name="previewOriginal">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -186,7 +186,7 @@
            <height>162</height>
           </rect>
          </property>
-         <widget class="QLabel" name="previewRc">
+         <widget class="ImageLabel" name="previewRc">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -565,6 +565,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>ImageLabel</class>
+   <extends>QLabel</extends>
+   <header>src/imagelabel.hpp</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>previewOriginalContainer</tabstop>
   <tabstop>previewRcContainer</tabstop>
