--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -144,15 +144,6 @@
             <height>72</height>
            </rect>
           </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="scaledContents">
-           <bool>true</bool>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
          </widget>
         </widget>
        </widget>
@@ -194,15 +185,6 @@
             <width>72</width>
             <height>72</height>
            </rect>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="scaledContents">
-           <bool>true</bool>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </widget>
@@ -568,7 +550,7 @@
  <customwidgets>
   <customwidget>
    <class>ImageLabel</class>
-   <extends>QLabel</extends>
+   <extends>QWidget</extends>
    <header>../src/imagelabel.hpp</header>
   </customwidget>
  </customwidgets>
