--- a/src/customranges.ui
+++ b/src/customranges.ui
@@ -44,7 +44,6 @@
            <property name="text">
             <string>&amp;Add</string>
            </property>
-		   <property name="icon" />
            <property name="toolButtonStyle">
             <enum>Qt::ToolButtonTextBesideIcon</enum>
            </property>
@@ -58,7 +57,6 @@
            <property name="text">
             <string>&amp;Delete</string>
            </property>
-		   <property name="icon" />
            <property name="toolButtonStyle">
             <enum>Qt::ToolButtonTextBesideIcon</enum>
            </property>
@@ -260,13 +258,11 @@
    </item>
   </layout>
   <action name="action_Rename">
-   <property name="icon" />
    <property name="text">
     <string>&amp;Rename</string>
    </property>
   </action>
   <action name="action_Duplicate">
-   <property name="icon" />
    <property name="text">
     <string>&amp;Duplicate</string>
    </property>
@@ -276,6 +272,7 @@
   <tabstop>listRanges</tabstop>
   <tabstop>cmdAdd</tabstop>
   <tabstop>cmdDelete</tabstop>
+  <tabstop>tbMoreOptions</tabstop>
   <tabstop>leAvg</tabstop>
   <tabstop>tbAvg</tabstop>
   <tabstop>leMax</tabstop>
