Fix path to the ImageLabel header file

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -567,7 +567,7 @@
   <customwidget>
    <class>ImageLabel</class>
    <extends>QWidget</extends>
-   <header>../src/imagelabel.hpp</header>
+   <header>src/imagelabel.hpp</header>
   </customwidget>
  </customwidgets>
  <tabstops>
