--- a/src/codesnippetdialog.ui
+++ b/src/codesnippetdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>540</width>
+    <height>320</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -32,6 +32,9 @@
    </item>
    <item>
     <widget class="QPlainTextEdit" name="teContents">
+     <property name="lineWrapMode">
+      <enum>QPlainTextEdit::NoWrap</enum>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
