--- a/src/customranges.ui
+++ b/src/customranges.ui
@@ -214,20 +214,14 @@
           </item>
          </layout>
         </item>
-        <item row="3" column="1">
+        <item row="3" column="0" colspan="2">
          <layout class="QHBoxLayout" name="horizontalLayout_6">
           <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+           <widget class="QPushButton" name="cmdAddFromList">
+            <property name="text">
+             <string>From &amp;List</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
+           </widget>
           </item>
           <item>
            <widget class="QPushButton" name="cmdWml">
