--- a/src/customranges.ui
+++ b/src/customranges.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Customize color ranges</string>
+   <string>Color Range Editor</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
    <item>
